---------------------------------------------------------------------------
Version 1.18.2 (rgerhards), 2007-08-??
---------------------------------------------------------------------------
Version 1.18.1 (rgerhards), 2007-08-08
- applied a patch from varmojfekoj which solved a potential segfault
  of rsyslogd on HUP
- applied patch from Michel Samia to fix compilation when the pthreads
  feature is disabled
- some code cleanup (moved action object to its own file set)
- add config directive $MainMsgQueueSize, which now allows to configure the
  queue size dynamically
- all compile-time settings are now shown in rsyslogd -v, not just the
  active ones
- enhanced performance a little bit more
- added config file directive $ActionResumeInterval
- fixed a bug that prevented compilation under debian sid
- added a contrib directory for user-contributed useful things
---------------------------------------------------------------------------
Version 1.18.0 (rgerhards), 2007-08-03
- rsyslog now supports fallback actions when an action did not work. This
  is a great feature e.g. for backup database servers or backup syslog
  servers
- modified rklogd to only change the console log level if -c is specified
- added feature to use multiple actions inside a single selector
- implemented $ActionExecOnlyWhenPreviousIsSuspended config directive
- error messages during startup are now spit out to the configured log
  destinations
---------------------------------------------------------------------------
Version 1.17.6 (rgerhards), 2007-08-01
- continued to work on output module modularization - basic stage of
  this work is now FINISHED
- fixed bug in OMSRcreate() - always returned SR_RET_OK
- fixed a bug that caused ommysql to always complain about missing
  templates
- fixed a mem leak in OMSRdestruct - freeing the object itself was
  forgotten - thanks to varmojfekoj for the patch
- fixed a memory leak in syslogd/init() that happend when the config